fix(workflows): update CI, release, and PR automation workflows (#290)
* fix(workflows): update CI, release, and PR automation workflows

- Added `.github/workflows/2-prepare-release-pr.yml` to automate Pull Request creation from `develop` to `main`.
- Updated CI workflow to include artifact uploads and post-coverage comments.
- Introduced `.github/workflows/3-publish-release.yml` to streamline releases and asset uploads on pushes to `main`.
- Implemented `sync_main_to_develop` step to cherry-pick release commits back to `develop`.
- Refined Agent Mode logic to better handle screen redraws.

* fix(workflows): replace coverage comment action in CI workflow

- Switched from `Misha-K/go-coverage-comment` to `robvanderleek/post-go-test-coverage-to-pr@v1` for posting coverage reports.

* fix(workflows): enhance CI with improved coverage reporting

- Updated unit test step to generate detailed coverage report and export total coverage percentage.
- Replaced `robvanderleek/post-go-test-coverage-to-pr` action with custom script for posting or updating coverage comments on PRs.

* fix(workflows): add coverage reporting and comment automation to CI

- Enhanced workflow to include test coverage generation and artifact uploads.
- Introduced post-coverage comment job to dynamically comment or update coverage data on PRs.

--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -1,18 +1,25 @@
-name: CI (Lint, Fmt, Test)
+name: CI (Lint, Fmt, Test, Coverage)
 
 on:
   pull_request:
     branches: [develop, main]
-#  push:
-#    branches: [develop]
 
 concurrency:
-  group: ci-${{ github.ref }}
+  group: ci-${{ github.head_ref }}
   cancel-in-progress: true
 
 jobs:
+  # JOB 1: Executa os testes e gera o relatório de cobertura
   lint-and-test:
+    name: Lint, Test and Generate Coverage
     runs-on: ubuntu-latest
+    # Permissões de leitura são suficientes para este job
+    permissions:
+      contents: read
+
+    # Ignora PRs criados por bots
+    if: github.actor != 'release-please[bot]' && github.actor != 'github-actions[bot]'
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -41,5 +48,75 @@ jobs:
       - name: Go vet
         run: go vet ./...
 
-      - name: Run unit tests
-        run: go test -race -coverprofile=coverage.out ./... -v
+      - name: Run unit tests and generate coverage report
+        run: |
+          go test -race -coverprofile=coverage.out ./...
+          go tool cover -func=coverage.out > coverage.txt
+
+      - name: Upload coverage report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.txt
+          retention-days: 1 # O artefato só precisa existir por 1 dia
+
+  # JOB 2: Baixa o relatório e posta o comentário no PR
+  post-coverage-comment:
+    name: Post Coverage Comment
+    runs-on: ubuntu-latest
+    # Este job precisa do resultado do job anterior
+    needs: lint-and-test
+
+    # Permissões de escrita para poder comentar no PR
+    permissions:
+      pull-requests: write
+
+    steps:
+      - name: Download coverage report artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-report
+
+      - name: Extract coverage percentage
+        id: extract_coverage
+        run: |
+          # Extrai a porcentagem da última linha do arquivo
+          COVERAGE=$(tail -n 1 coverage.txt | awk '{print $3}')
+          echo "total_coverage=${COVERAGE}" >> $GITHUB_OUTPUT
+
+      - name: Post or Update Coverage Comment on PR
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const coverage = "${{ steps.extract_coverage.outputs.total_coverage }}";
+            const header = "### 📊 Go Test Coverage";
+            const body = `${header}\n\n**Total Coverage:** \`${coverage}\``;
+            
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            
+            const botComment = comments.find(comment => 
+              comment.user.login === 'github-actions[bot]' && comment.body.startsWith(header)
+            );
+            
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: body
+              });
+              core.info(`Updated coverage comment (ID: ${botComment.id}).`);
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: body
+              });
+              core.info('Created a new coverage comment.');
+            }
