--- a/.github/workflows/3-publish-release.yml
+++ b/.github/workflows/3-publish-release.yml
@@ -1,4 +1,4 @@
-name: Publish Release
+name: Release on main (PR + GitHub Release)
 
 on:
   push:
@@ -10,32 +10,29 @@ permissions:
   id-token: write
 
 concurrency:
-  group: publish-release-main
+  group: release-main
   cancel-in-progress: true
 
 jobs:
-  publish_release:
-    name: Create GitHub Tag and Release
+  release_please:
+    name: Release Please (create PR and release)
     runs-on: ubuntu-latest
     outputs:
       tag_name: ${{ steps.rp.outputs.tag_name }}
       release_created: ${{ steps.rp.outputs.release_created }}
-      release_sha: ${{ steps.rp.outputs.release_sha }}
-
     steps:
-      - name: Run Release Please to create release
+      - name: Release Please
         id: rp
-        uses: google-github-actions/release-please-main@v4
+        uses: googleapis/release-please-action@v4
         with:
-          # Agora, o comando é para criar o release no GitHub
-          command: github-release
           release-type: go
           token: ${{ secrets.GH_RELEASE_TOKEN }}
+          target-branch: main
 
   build_and_upload:
-    name: Build and upload binaries
-    needs: [publish_release]
-    if: needs.publish_release.outputs.release_created == 'true'
+    name: Build e upload de binários (após release criada)
+    needs: [release_please]
+    if: needs.release_please.outputs.release_created == 'true'
     runs-on: ubuntu-latest
     environment: production
     steps:
@@ -43,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ needs.publish_release.outputs.tag_name }}
+          ref: ${{ needs.release_please.outputs.tag_name }}
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -54,50 +51,88 @@ jobs:
       - name: Build binaries
         env:
           CGO_ENABLED: 0
-          TAG_NAME: ${{ needs.publish_release.outputs.tag_name }}
+          TAG_NAME: ${{ needs.release_please.outputs.tag_name }}
         run: |
-          # ... (seu script de build aqui, sem alterações)
           set -euo pipefail
           COMMIT_HASH=$(git rev-parse --short HEAD)
           BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           VERSION="$TAG_NAME"
           LDFLAGS="-X 'github.com/diillson/chatcli/version.Version=${VERSION}' -X 'github.com/diillson/chatcli/version.CommitHash=${COMMIT_HASH}' -X 'github.com/diillson/chatcli/version.BuildDate=${BUILD_DATE}'"
+          
           GOOS=linux   GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o chatcli-linux-amd64       ./main.go
           GOOS=darwin  GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o chatcli-darwin-amd64      ./main.go
           GOOS=darwin  GOARCH=arm64 go build -ldflags="${LDFLAGS}" -o chatcli-darwin-arm64      ./main.go
           GOOS=windows GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o chatcli-windows-amd64.exe ./main.go
+          
+          ./chatcli-linux-amd64 --version || true
 
-      - name: Upload assets
+      - name: Wait for release availability
         env:
           GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
-          TAG_NAME: ${{ needs.publish_release.outputs.tag_name }}
+          TAG_NAME: ${{ needs.release_please.outputs.tag_name }}
         run: |
-          # ... (seu script de upload aqui, sem alterações)
-          gh release upload "$TAG_NAME" chatcli-*-* --clobber
+          set -euo pipefail
+          for i in {1..18}; do
+            if gh release view "$TAG_NAME" >/dev/null 2>&1; then
+              echo "Release $TAG_NAME disponível."
+              break
+            fi
+            echo "Aguardando release ficar disponível ($i/18)..."
+            sleep 5
+          done
 
+      - name: Upload assets with retry
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
+          TAG_NAME: ${{ needs.release_please.outputs.tag_name }}
+        run: |
+          set -euo pipefail
+          files=(
+            chatcli-linux-amd64
+            chatcli-darwin-amd64
+            chatcli-darwin-arm64
+            chatcli-windows-amd64.exe
+          )
+          for f in "${files[@]}"; do
+            for attempt in {1..4}; do
+              if gh release upload "$TAG_NAME" "$f" --clobber; then
+                echo "Enviado: $f"
+                break
+              fi
+              echo "Falha ao enviar $f (tentativa $attempt). Retentando..."
+              sleep $((attempt*5))
+            done
+          done
+
+  # Opcional: sincroniza main -> develop após publicar a release
   sync_main_to_develop:
-    name: Sync release commit back to develop
-    needs: [publish_release]
-    if: needs.publish_release.outputs.release_created == 'true' && needs.publish_release.outputs.release_sha != ''
+    needs: [release_please]
+    if: needs.release_please.outputs.release_created == 'true'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_RELEASE_TOKEN }}
           fetch-depth: 0
 
-      - name: Configure Git user
+      - name: Configura usuário git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Cherry-pick release commit onto develop
+      - name: Sync release-please from main to develop (rebase)
         run: |
-          set -euo pipefail
           git checkout develop
-          git pull origin develop
-          echo "Cherry-picking commit ${{ needs.publish_release.outputs.release_sha }} onto develop..."
-          git cherry-pick ${{ needs.publish_release.outputs.release_sha }}
-          echo "Pushing updated develop branch..."
-          git push origin develop
+          # Pega o último commit da main (que é o do release-please)
+          # last_commit=$(git log origin/main -1 --pretty=format:%H)
+          
+          # Aplica esse commit na develop como squash
+          # git cherry-pick -n $last_commit || true
+          git fetch origin
+
+          # Cria um commit único na develop com a mensagem da release
+          # msg=$(git log -1 --pretty=%B $last_commit)
+          # git commit -m "chore(sync): propagate release-please changes - $msg" || echo "Nada para commitar"
+          git reset --hard origin/main
+
+          git push --force
