--- a/.github/bkp/1-ci.yml
+++ b/.github/bkp/1-ci.yml
@@ -1,19 +1,18 @@
-name: CI (Lint, Fmt, Test, Coverage)
+name: CI (Lint, Fmt, Test)
 
 on:
   pull_request:
     branches: [develop, main]
+#  push:
+#    branches: [develop]
 
 concurrency:
-  group: ci-${{ github.head_ref }}
+  group: ci-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  # JOB 1: Executa os testes e gera o relatório de cobertura
   lint-and-test:
-    name: Lint, Test and Generate Coverage
     runs-on: ubuntu-latest
-    if: github.actor != 'release-please[bot]' && github.actor != 'github-actions[bot]'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -43,13 +42,4 @@ jobs:
         run: go vet ./...
 
       - name: Run unit tests
-        run: |
-          go test -race -coverprofile=coverage.out ./... -v
-          go tool cover -func=coverage.out > coverage.txt
-
-      - name: Upload coverage report artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.txt
-          retention-days: 7 # O artefato só precisa existir por 7 dias
+        run: go test -race -coverprofile=coverage.out ./... -v
