fix: use `npm ci` for consistent installs and add package.json for ghpages dependencies
- Replaced `npm install` with `npm ci` in GitHub Actions for deterministic dependency installs.
- Added `package.json` and `package-lock.json` to manage ghpages dependencies (`@popperjs/core` and `bootstrap`).
- Updated `.gitignore` to exclude `ghpages/node_modules`.

--- a/.github/workflows/0-ghpages.yml
+++ b/.github/workflows/0-ghpages.yml
@@ -51,7 +51,7 @@ jobs:
       # 4. Instala as dependências do Node.js, executando dentro da pasta 'ghpages'
       - name: Instala as dependências do Node.js, executando dentro da pasta 'ghpages'
         working-directory: ./ghpages
-        run: npm install
+        run: npm ci
 
       # 5. Constrói o site Hugo, também executando dentro da pasta 'ghpages'
       - name: Build Hugo Site
