--- a/ghpages/.chatignore
+++ b/ghpages/.chatignore
@@ -1,19 +1,4 @@
-# Ignorar arquivos de teste do Go
-#*_test.go
-
-# Ignorar diretórios de documentação e testes e2e
-docs/
-e2e/
-assets/
+# Ignorar diretórios de temas
 themes/
-
-# Ignorar arquivos de configuração específicos
-CHANGELOG.md
-LICENSE
-README.md
-README_EN.md
-.gitignore
-Makefile
-.chatignore
-.github/
-golangci.yml
+public/
+resources/
