--- a/ghpages/hugo.toml
+++ b/ghpages/hugo.toml
@@ -1,14 +1,21 @@
+# ==========================================================
+#  Configuração Base do Hugo
+# ==========================================================
 baseURL = 'https://diillson.github.io/chatcli'
 languageCode = 'pt-BR'
 title = 'ChatCLI - Seu Terminal com IA'
 contentDir = 'content'
 enableEmoji = true
 
+# Habilita a geração de um índice JSON para a busca no site.
+[outputs]
+  home = [ "HTML", "RSS", "JSON" ]
+
 # ==========================================================
-#  Configuração do Módulo (Correta como estava)
+#  Configuração do Módulo (Importação do Tema)
 # ==========================================================
 [module]
-replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
+  replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
   [[module.imports]]
     path = "github.com/colinwilson/lotusdocs"
     disable = false
@@ -20,24 +27,39 @@ replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
 #  Configuração dos Parâmetros do Tema Lotus Docs
 # ==========================================================
 [params]
-  [params.docs]
-# Esta é a configuração correta para manter o menu sempre aberto
-    alwaysopen = true
-  #  darkMode = true
-  #  themeColor = "green"
-    prism = true
-    sidebarIcons = true
-    titleIcon = true
-    toggle = true
+# Adiciona links para redes sociais/comunidade no cabeçalho.
+  [params.social]
+    github = "diillson/chatcli"
 
-# --- NÃO REMOVA AS CONFIGURAÇÕES ABAIXO ---
+[params.docs]
+  # Mantém os menus da barra lateral sempre expandidos para facilitar a navegação.
+  alwaysopen = true
+  # Habilita o modo escuro por padrão, mas permite que o usuário alterne.
+  darkMode = false
+  # Muda a cor do tema para azul, mais alinhado com a identidade de "terminal".
+  themeColor = "blue"
+  # Habilita o syntax highlighting do PrismJS para blocos de código.
+  prism = true
+  # Habilita ícones na barra lateral para uma navegação mais visual.
+  sidebarIcons = true
+  # Habilita ícone ao lado do título da página.
+  titleIcon = true
+  # Habilita o botão de alternância de tema (claro/escuro).
+  toggle = true
+  # Habilita o suporte para diagramas Mermaid.js.
+  mermaid = true
+
+# ==========================================================
+#  Configuração do Processador de Markdown (Goldmark)
+# ==========================================================
 [markup]
   [markup.tableOfContents]
     endLevel = 3
     startLevel = 1
-[markup.goldmark]
-  [markup.goldmark.renderer]
-    unsafe = true # Necessário para renderizar o HTML dos ícones
-  [markup.goldmark.parser]
-    [markup.goldmark.parser.attribute]
-      block = true
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+    # Permite a renderização de HTML bruto, essencial para nossos shortcodes e ícones.
+      unsafe = true
+    [markup.goldmark.parser]
+      [markup.goldmark.parser.attribute]
+        block = true
