feat(plugins-examples): add `chatcli-eks` plugin for EKS cluster deployment
- Introduced `chatcli-eks` plugin to simplify EKS cluster setup with Pulumi as IaC engine.
- Features include production-ready EKS clusters with support for VPC, Spot Instances, ArgoCD, Istio, Nginx, Cert-Manager, External DNS, and KMS encryption.
- Added comprehensive CLI commands (`create`, `delete`, `cleanup`, `kms-info`) with validations and advanced options.
- Included extensive documentation with usage examples, cost estimates, and troubleshooting tips.

--- a/golangci.yml
+++ b/golangci.yml
@@ -2,6 +2,15 @@ run:
   timeout: 5m
   tests: false
 
+  skip-dirs:
+    - vendor
+    - pkg/mod
+    - "**/pkg/mod"
+    - "$GOMODCACHE"
+  skip-files:
+    - ".*pkg/mod/.*"
+  modules-download-mode: vendor
+
 linters:
   enable:
     - govet
