fix(cli): add `--raw` flag to disable Markdown/ANSI formatting in one-shot mode
- Introduced the `--raw` flag to provide unformatted output in one-shot mode, useful for CI/CD workflows.
- Updated `RunOnce` method to support conditional raw or formatted output.
- Modified GitHub workflow to include the `--raw` flag for clean CI logging.

--- a/.github/workflows/2-prepare-release-pr.yml
+++ b/.github/workflows/2-prepare-release-pr.yml
@@ -88,7 +88,7 @@ jobs:
           
           # 3. Executar o chatcli em modo one-shot para gerar o conteúdo
           # Usamos --no-anim para uma saída limpa no log do CI
-          AI_RESPONSE=$(chatcli -p "$PROMPT" --no-anim --provider OPENAI --model gpt-5)
+          AI_RESPONSE=$(chatcli -p "$PROMPT" --no-anim --raw --provider OPENAI --model gpt-5)
           
           # 4. Salvar a resposta completa para o próximo passo
           # Usamos a sintaxe recomendada para outputs de múltiplas linhas
