--- a/.github/workflows/2-prepare-release-pr.yml
+++ b/.github/workflows/2-prepare-release-pr.yml
@@ -98,6 +98,8 @@ jobs:
 
       - name: Open or reuse PR develop -> main
         uses: actions/github-script@v7
+        env:
+          AI_RESPONSE_CONTENT: ${{ steps.generate-pr-content.outputs.ai_response }}
         with:
           github-token: ${{ secrets.GH_RELEASE_TOKEN }}
           script: |
@@ -105,50 +107,48 @@ jobs:
             const repo = context.repo.repo;
             const head = 'develop';
             const base = 'main';
-            
+      
             // 1. Verificar se um PR já existe
             const { data: prs } = await github.rest.pulls.list({
               owner, repo, state: 'open', head, base, per_page: 1
             });
-            
+      
             if (prs.length > 0) {
               core.info(`PR já existe: #${prs[0].number}. Nenhuma ação necessária.`);
               return;
             }
-            
-            // 2. Processar a resposta da IA com lógica de fallback aprimorada
-            const ai_response = `${{ steps.generate-pr-content.outputs.ai_response }}`.trim();
-            
+      
+            // 2. Processar a resposta da IA lendo da ENV (Seguro contra caracteres especiais)
+            const ai_response = process.env.AI_RESPONSE_CONTENT.trim();
+      
             let title = `Merge develop into main`; // Título de fallback
             let body = `PR automático para promover mudanças da develop à main.`; // Corpo de fallback
-            
+      
             // Tentativa 1: Separador ideal "---"
             let parts = ai_response.split('\n---\n');
-            
+      
             if (parts.length >= 2) {
               title = parts[0].trim();
               body = parts[1].trim();
               core.info("Resposta da IA parseada com sucesso usando '---'.");
             } else {
-              // Tentativa 2: Fallback - Primeira linha como título, resto como corpo
+              // Lógica de fallback...
               const firstNewlineIndex = ai_response.indexOf('\n');
               if (firstNewlineIndex !== -1) {
                 title = ai_response.substring(0, firstNewlineIndex).trim();
                 body = ai_response.substring(firstNewlineIndex + 1).trim();
-                // Remove caracteres de título markdown do título, se houver
                 title = title.replace(/^#+\s*/, '');
                 core.info("Usando fallback: primeira linha como título.");
               } else {
-                // Se não houver quebra de linha, usa a resposta inteira como título
                 title = ai_response;
-                core.warning("Resposta da IA não continha quebras de linha. Usando a resposta inteira como título.");
+                core.warning("Resposta da IA não continha quebras de linha.");
               }
             }
-            
+      
             // 3. Criar o Pull Request
             const { data: pr } = await github.rest.pulls.create({
               owner, repo, head, base, title, body
             });
-            
+      
             core.info(`PR criado com sucesso: #${pr.number}`);
-            core.info(`Título: ${title}`);
+            core.info(`Título: ${title}`);            
