feat(auth): implement OAuth2 credential store, login flows, and support for dynamic provider tokens
- Added comprehensive authentication module with support for Anthropic and OpenAI Codex OAuth2 configurations.
- Implemented token storage, management, and automatic refresh for external CLI providers.
- Introduced new commands `/auth login`, `/auth logout`, and `/auth status` for managing authentication profiles within the CLI.
- Enhanced LLMManager with dynamic token resolution and fallback support for environment variables. Improved compatibility with external APIs.
- Updated `.chatignore` for better exclusions in the development process.

--- a/.chatignore
+++ b/.chatignore
@@ -1,4 +1,4 @@
-# Ignorar arquivos de teste do Go
+# Ignorar arquivos de teste do G
 *_test.go
 
 # Ignorar diretórios de documentação e testes e2e
@@ -10,12 +10,13 @@ plugins-examples/
 i18n/
 tools/
 version/
+.agent/
+utils/
+pkg/
 
 # Ignorar arquivos de configuração específicos
-CHANGELOG.md
+*.md
 LICENSE
-README.md
-README_EN.md
 .gitignore
 Makefile
 .chatignore
