feat: add gRPC server mode, K8s watcher, and comprehensive documentation
Add remote server mode (chatcli serve) with gRPC, allowing centralized
LLM access from any terminal, Docker, or Kubernetes. Add client connect
(chatcli connect) with 5 credential modes (server, API key, OAuth local,
StackSpot, Ollama). Add K8s Watcher (chatcli watch) for real-time
Kubernetes deployment monitoring with AI-powered diagnostics.

Server & Client:
- gRPC server with token auth, TLS, streaming, health check
- 9 RPCs: SendPrompt, StreamPrompt, InteractiveSession, sessions, health,
  GetServerInfo, GetWatcherStatus
- Progressive streaming via chunkResponse (natural boundary splitting)
- Remote client implementing LLMClient interface transparently
- Dockerfile (multi-stage, non-root) and docker-compose.yml
- Helm chart with full RBAC, TLS, persistence, watcher integration

K8s Watcher:
- 7 data collectors: pods, events, logs, metrics, deployment, HPA, ingress
- Observability store with ring buffer and time-windowed retention
- Anomaly detection: CrashLoopBackOff, OOMKilled, PodNotReady, DeploymentFailing
- Summarizer generates LLM context blocks from K8s data
- Works standalone (chatcli watch) and integrated with server (chatcli serve)
- /watch status command works locally and remotely via RPC

Documentation:
- README.md and README_EN.md updated with server/K8s sections
- 6 new ghpages docs: server-mode, remote-connect, k8s-watcher,
  docker-deployment, cookbook/remote-server-setup, cookbook/k8s-monitoring
- Updated reference/configuration.md with 13 new env vars
- Updated reference/command-reference.md with serve/connect/watch subcommands
- FlexSearch tokenization changed from "forward" to "full" for substring
  matching (search now finds partial matches anywhere in words)
- maxResult increased from 5 to 10, searchSectionsIndex set to ALL

--- a/ghpages/hugo.toml
+++ b/ghpages/hugo.toml
@@ -39,6 +39,12 @@ enableEmoji = true
   secondary_font  = "Space Grotesk"
   mono_font       = "IBM Plex Mono"
 
+[params.flexsearch]
+  tokenize = "full"
+  maxResult = 10
+  optimize = true
+  searchSectionsIndex = "ALL"
+
 [params.docs]
   # Mantém os menus da barra lateral sempre expandidos para facilitar a navegação.
   alwaysopen = true
