--- a/.github/workflows/2-prepare-release-pr.yml
+++ b/.github/workflows/2-prepare-release-pr.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23' # Use a versão do Go do seu projeto
+          go-version: '1.25'
 
       - name: Install ChatCLI
         run: go install github.com/diillson/chatcli@latest
