--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -21,13 +21,14 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24.12'
+          go-version: '1.25'
           cache: true
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: latest
+          version: v1.64.8
+          install-mode: goinstall
           args: --timeout=5m
 
       - name: Check gofmt
